// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<AdultBlock /> should render with props 1`] = `
<AdultBlock
  isAuthUser={true}
  onClick={[MockFunction]}
>
  <Box
    direction="column"
    display="flex"
    flex="grow"
    marginTop={0}
  >
    <div
      className="display-flex flex-grow direction-column M-t__0"
    >
      <Box
        marginBottom={1}
      >
        <div
          className="M-b__1"
        >
          <Memo(Text)
            size={16}
            weight={600}
          >
            <span
              className="size-16 line-height-24 weight-600"
            >
              Товар для взрослых
            </span>
          </Memo(Text)>
        </div>
      </Box>
      <Memo(Text)
        lineHeight={20}
        size={12}
      >
        <span
          className="size-12 line-height-20"
        >
          Подтвердите, что вы старше 18 лет, чтобы посмотреть товар.
        </span>
      </Memo(Text)>
      <Box
        marginTop={6}
      >
        <div
          className="M-t__6"
        >
          <ForwardRef(Link)
            onClick={[MockFunction]}
            pseudo={true}
          >
            <a
              className="link color__brand-blue"
              onClick={[MockFunction]}
              role="button"
              tabIndex={0}
            >
              <Memo(Text)
                lineHeight={32}
                size={16}
                weight={600}
              >
                <span
                  className="size-16 line-height-32 weight-600"
                >
                  Подтвердить
                </span>
              </Memo(Text)>
            </a>
          </ForwardRef(Link)>
        </div>
      </Box>
    </div>
  </Box>
</AdultBlock>
`;

exports[`<AdultBlock /> should render without props 1`] = `
<AdultBlock>
  <Box
    direction="column"
    display="flex"
    flex="grow"
    marginTop={0}
  >
    <div
      className="display-flex flex-grow direction-column M-t__0"
    >
      <Box
        marginBottom={1}
      >
        <div
          className="M-b__1"
        >
          <Memo(Text)
            size={16}
            weight={600}
          >
            <span
              className="size-16 line-height-24 weight-600"
            >
              Товар для взрослых
            </span>
          </Memo(Text)>
        </div>
      </Box>
      <Memo(Text)
        lineHeight={20}
        size={12}
      >
        <span
          className="size-12 line-height-20"
        >
          Если вам уже есть 18 лет, авторизуйтесь, чтобы перейти к товару.
        </span>
      </Memo(Text)>
      <Box
        marginTop={6}
      >
        <div
          className="M-t__6"
        >
          <ForwardRef(Link)
            pseudo={true}
          >
            <a
              className="link color__brand-blue"
              role="button"
              tabIndex={0}
            >
              <Memo(Text)
                lineHeight={32}
                size={16}
                weight={600}
              >
                <span
                  className="size-16 line-height-32 weight-600"
                >
                  Авторизоваться
                </span>
              </Memo(Text)>
            </a>
          </ForwardRef(Link)>
        </div>
      </Box>
    </div>
  </Box>
</AdultBlock>
`;
